// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`queue > matches the snapshot 1`] = `
"<div class="centerItems spaceBetween">
  <h1>Queue (1)</h1>
  <div class="centerItems"><button class="centerItems buttonLink" draggable="false" type="button" title="Clear queue">
      <phtrash aria-hidden="true" class="icon" size="24" weight="regular"></phtrash><span class="clamp text visuallyHidden"> Clear queue </span>
    </button></div>
</div>
<div class="trackTable withPreview">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Album/Podcast</div>
    <div class="trackCell trackSecondary">Artists/Author</div>
    <div class="trackCell trackTime">Duration</div>
    <div class="trackCell trackOptions"></div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="lazyLoadContent trackRow" data-test-id="track" draggable="true">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Image" class="image" draggable="false" loading="lazy" src="image"></div>
          <p class="overlap trackNumber visuallyHidden">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" draggable="false" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-0-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
                    </ul>
                  </li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>02:00</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" draggable="false" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content"><a class="link" data-test-id="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">02:00</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" draggable="false" type="button" title="Remove track">
        <phx aria-hidden="true" class="icon" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove track </span>
      </button></div>
  </div>
</div>"
`;

exports[`queue > when queueList is not an empty array > matches the snapshot 1`] = `
"<div class="centerItems spaceBetween">
  <h1>Queue (2)</h1>
  <div class="centerItems"><button class="centerItems buttonLink" draggable="false" type="button" title="Clear queue">
      <phtrash aria-hidden="true" class="icon" size="24" weight="regular"></phtrash><span class="clamp text visuallyHidden"> Clear queue </span>
    </button></div>
</div>
<div class="trackTable withPreview">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Album/Podcast</div>
    <div class="trackCell trackSecondary">Artists/Author</div>
    <div class="trackCell trackTime">Duration</div>
    <div class="trackCell trackOptions"></div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="lazyLoadContent trackRow" data-test-id="track" draggable="true">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Image" class="image" draggable="false" loading="lazy" src="image-0"></div>
          <p class="overlap trackNumber visuallyHidden">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" draggable="false" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>track-0</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
                    </ul>
                  </li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>02:00</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" draggable="false" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content"><a class="link" data-test-id="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">02:00</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" draggable="false" type="button" title="Remove track">
        <phx aria-hidden="true" class="icon" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove track </span>
      </button></div>
  </div>
  <div class="lazyLoadContent trackRow" data-test-id="track" draggable="true">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Image" class="image" draggable="false" loading="lazy" src="image-1"></div>
          <p class="overlap trackNumber visuallyHidden">1</p>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" draggable="false" type="button">
              <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="noTouchEvents trackMeta">
          <div class="marqueeScroll mBXS" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4>track-1</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
                      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
                    </ul>
                  </li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>02:00</time></span></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" draggable="false" type="button" title="Like track">
          <phheart aria-hidden="true" class="icon" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content"><a class="link" data-test-id="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">02:00</time>
    <div class="trackCell trackOptions">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" draggable="false" type="button" title="Remove track">
        <phx aria-hidden="true" class="icon" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove track </span>
      </button></div>
  </div>
</div>"
`;
